--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <title>Document</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="mobile.css">
+    <link rel="stylesheet" href="assets/code/mobile.css">
+    <link rel="stylesheet" href="assets/code/style.css">
 </head>
 <body>
     <header>
@@ -24,8 +24,8 @@
                         <li class="nav-item"><a class="navbar-brand nav-link" href="#contact">Contacts</a></li>
                     </ul>                    
                 </div>
-            <img src="menu-regular-24 (1).png" alt="burger-menu" height="40px" width="40px" class="burger-menu">
-            </div>            
+            <img src="assets/imgs/menu-regular-24 (1).png" alt="burger-menu" height="40px" width="40px" class="burger-menu">    
+            </div>           
         </nav>
         <div class="mob-list">
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
@@ -37,6 +37,18 @@
             </ul>  
         </div>    
     </header>
+    <main>
+        <div class="container-fluid p-0 d-flex flex-column-reverse flex-md-row bg-light main" id="home">
+            <div class="container-fluid m-auto p-5 left">
+                <h1 class="display-1 fw-bold">Hyperskill Cafe</h1>
+                <p class="col-md-8 py-3 lead fs-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate quisquam sed tenetur id ullam aperiam dolorem error placeat doloremque</p>
+                <a href="#products"><button class="btn btn-primary btn-lg" type="button">Discover our products</button></a>
+            </div>
+            <div class="container-fluid p-0">
+                <img src="assets/imgs/cofe.jpg" alt="coffee" height="300px" width="400px" class="img-fluid w-100">
+            </div>
+        </div>    
+    </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
