--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/code/mobile.css">
     <link rel="stylesheet" href="assets/code/style.css">
+    <link rel="stylesheet" href="assets/code/fonts.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+
 </head>
 <body>
     <header>
@@ -46,6 +51,13 @@
             </div>
             <div class="container-fluid p-0">
                 <img src="assets/imgs/cofe.jpg" alt="coffee" height="300px" width="400px" class="img-fluid w-100">
+            </div>
+        </div>
+        <div id="about" class="container-fluid bg-light p-0">
+            <div class="container-fluid p-0"><img src="assets/imgs/cafe.jpg" alt="cafe" class="img-fluid"></div>
+            <div class="container-fluid p-5 text">
+                <h2 class="display-5 fw-bold">About Us</h2>
+                <p class="py-3 fs-5">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reprehenderit unde temporibus sunt animi minus? Quasi non atque sed expedita enim.</p>
             </div>
         </div>    
     </main>
