--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
-
 </head>
 <body>
     <header>
@@ -58,6 +57,66 @@
             <div class="container-fluid p-5 text">
                 <h2 class="display-5 fw-bold">About Us</h2>
                 <p class="py-3 fs-5">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reprehenderit unde temporibus sunt animi minus? Quasi non atque sed expedita enim.</p>
+            </div>
+        </div>
+        <div id="products" class="container-fluid bg-light p-0 flex">
+            <h2 class="display-5 pt-5 px-5 fw-bold">Our Products</h2>
+            <div class="px-5">
+                <div class="row">
+                    <div class="col col-lg-4 col-md-6 py-3">
+                        <div class="card h-100">
+                            <img src="assets/imgs/cafe.jpg" alt="img" class="card-img-top img-fluid h-100">
+                            <div class="card-body">
+                                <h5 class="card-title">Espresso</h5>
+                                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim, aut!</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col col-lg-4 col-md-6 py-3">
+                        <div class="card h-100">
+                            <img src="assets/imgs/cofe.jpg" alt="img" class="card-img-top img-fluid h-100">
+                            <div class="card-body">
+                                <h5 class="card-title">Latte</h5>
+                                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim, aut!</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col col-lg-4 col-md-6 py-3">
+                        <div class="card h-100">
+                            <img src="assets/imgs/cafe.jpg" alt="img" class="card-img-top img-fluid h-100">
+                            <div class="card-body">
+                                <h5 class="card-title">Latte</h5>
+                                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim, aut!</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col col-lg-4 col-md-6 py-3">
+                        <div class="card h-100">
+                            <img src="assets/imgs/cofe.jpg" alt="img" class="card-img-top img-fluid h-100">
+                            <div class="card-body">
+                                <h5 class="card-title">Latte</h5>
+                                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim, aut!</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col col-lg-4 col-md-6 py-3">
+                        <div class="card h-100">
+                            <img src="assets/imgs/cafe.jpg" alt="img" class="card-img-top img-fluid h-100">
+                            <div class="card-body">
+                                <h5 class="card-title">Latte</h5>
+                                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim, aut!</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col col-lg-4 col-md-6 py-3">
+                        <div class="card h-100">
+                            <img src="assets/imgs/cofe.jpg" alt="img" class="card-img-top img-fluid h-100">
+                            <div class="card-body">
+                                <h5 class="card-title">Espresso</h5>
+                                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim, aut!</p>
+                            </div>
+                        </div>
+                    </div>
             </div>
         </div>    
     </main>
