--- a/index.html
+++ b/index.html
@@ -118,8 +118,79 @@
                         </div>
                     </div>
             </div>
-        </div>    
+        </div>
+        <div id="reviews" class="container-fluid p-0 bg-light flex">
+            <h2 class="display-5 pt-5 px-5 fw-bold">Reviews From Our Customers</h2>
+            <div class="px-5 my-3">
+                <button type="button" aria-controls="collapseReview" aria-expanded="false" class="btn btn-primary"
+                        data-bs-toggle="collapse" data-bs-target="#collapseReview">Add Review
+                </button>
+            </div>
+            <div class="collapse" id="collapseReview">
+                <div class="px-5">
+                    <div class="card card-body">
+                        <form class="row g-3">
+                            <div class="col-md-4">
+                                <label class="form-label" for="reviewTitle">Title</label>
+                                <input class="form-control" type="text" id="reviewTitle" required>
+                            </div>
+                            <div class="col-md-4">
+                                <label class="form-label" for="reviewText">Comment</label>
+                                <input class="form-control" type="text" id="reviewText" required>
+                            </div>
+                            <div class="col-md-4">
+                                <label class="form-label" for="reviewName">Name</label>
+                                <input class="form-control" type="text" id="reviewName">
+                            </div>
+                            <div class="col-12">
+                                <button class="btn btn-primary" id="reviewButton" type="submit">Submit</button>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+            <div class="px-5">
+                <div id="reviewsRow" class="row">
+                    <div class="col col-lg-4 col-md-6 py-3">
+                        <div class="card h-100">
+                            <div class="card-body">
+                                <h4 class="card-title">Great Restaurant!</h4>
+                                <blockquote class="blockquote mb-0">
+                                    <p>The coffee is great, here!</p>
+                                    <footer class="text-end blockquote-footer"><i>Lorem Ipsum 1</i></footer>
+                                </blockquote>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col col-lg-4 col-md-6 py-3">
+                        <div class="card h-100">
+                            <div class="card-body">
+                                <h4 class="card-title">I love this place!</h4>
+                                <blockquote class="blockquote mb-0">
+                                    <p>You have to try cheesecake here!</p>
+                                    <footer class="text-end blockquote-footer"><i>Lorem Ipsum 2</i></footer>
+                                </blockquote>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col col-lg-4 col-md-6 py-3">
+                        <div class="card h-100">
+                            <div class="card-body">
+                                <h4 class="card-title">First time visit!</h4>
+                                <blockquote class="blockquote mb-0">
+                                    <p>You should try this place.</p>
+                                    <footer class="text-end blockquote-footer"><i>Lorem Ipsum 3</i></footer>
+                                </blockquote>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
     </main>
+        
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="assets/code/script.js"></script>
 </body>
 </html>
