add contact section with map

--- a/index.html
+++ b/index.html
@@ -187,9 +187,23 @@
                 </div>
             </div>
         </div>
+        <div id=contact class="container-fluid bg-light p-0 flex">
+            <div class="container-fluid d-md-flex justify-content-between p-5">
+                <h2 class="display-5 w-100 mb-3 fw-bold">Contact Us</h2>
+                <div class="container ps-0">
+                    <p class="fs-5"><b>Address:</b> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Possimus ipsam sit earum maiores animi sapiente.</p>
+                    <p class="fs-5"><b>Phone Number:</b> <a href="tel: 8-(977)-919-70-41">+7-(977)-919-70-41</a></p>
+                    <p class="fs-5"><b>Email:</b> <a href="mailto: zatzepin42@yandex.ru"> zatzepin42@yandex.ru</a></p>
+                </div>
+            </div>
+            <div class="container-fluid d-md-flex p-0 flex">
+                <div class="ratio ratio-16x9">
+                    <iframe src="https://www.google.com/maps/embed" frameborder="0" loading="lazy"></iframe>
+                </div>
+            </div>
+        </div>
     </div>
     </main>
-        
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"></script>
     <script src="assets/code/script.js"></script>
 </body>
