--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
                     <p class="fs-5"><b>Email:</b> <a href="mailto: zatzepin42@yandex.ru"> zatzepin42@yandex.ru</a></p>
                 </div>
             </div>
-            <div class="container-fluid d-md-flex p-0 flex">
+            <div class="container-fluid d-md-flex p-0 flex w-50">
                 <div class="ratio ratio-16x9">
                     <iframe src="https://www.google.com/maps/embed" frameborder="0" loading="lazy"></iframe>
                 </div>
@@ -204,6 +204,30 @@
         </div>
     </div>
     </main>
+    <footer id=footer class="footer bg-dark">
+        <div class="container-fluid p-0 pt-5 pb-3">
+            <ul class="nav">
+                <li class="nav-item">
+                    <a href="#home" class="nav-link link-secondary">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a href="#about" class="nav-link link-secondary">About</a>
+                </li>
+                <li class="nav-item">
+                    <a href="#products" class="nav-link link-secondary">Products</a>
+                </li>
+                <li class="nav-item">
+                    <a href="#reviews" class="nav-link link-secondary">Reviews</a>
+                </li>
+                <li class="nav-item">
+                    <a href="#contact" class="nav-link link-secondary" aria-current="page">Contact</a>
+                </li>
+            </ul>
+        </div>
+        <div class="container-fluid pb-5 px-4">
+            <span class="px-1" style="color: rgb(124, 124, 124); margin-top: 40px;">2021 Hyperskill Cafe</span>
+        </div>
+    </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"></script>
     <script src="assets/code/script.js"></script>
 </body>
